--- a/JamSesh/Base.lproj/Main.storyboard
+++ b/JamSesh/Base.lproj/Main.storyboard
@@ -154,37 +154,94 @@
             </objects>
             <point key="canvasLocation" x="848.79999999999995" y="134.48275862068968"/>
         </scene>
-        <!--SEARCH-->
+        <!--Search-->
         <scene sceneID="Kqg-Xj-kqF">
             <objects>
                 <viewController id="RsE-Fb-tc4" customClass="SearchViewController" customModule="JamSesh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hp5-8j-J0c">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HGV-7P-aRM">
+                                <rect key="frame" x="0.0" y="64" width="414" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="search_24px_outlined-1" translatesAutoresizingMaskIntoConstraints="NO" id="fl8-cW-vuX">
+                                <rect key="frame" x="149" y="214" width="117" height="113"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Foc-Uz-spn">
+                                <rect key="frame" x="77" y="348" width="260" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">Search for songs, music sessions,
+and other music lovers.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="msS-oA-OFF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="SEARCH" image="search_24px_outlined-3" selectedImage="search_24px_outlined-3" id="ZBG-o7-78r"/>
+                    <navigationItem key="navigationItem" title="Search" id="YcC-QB-cu0"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bBx-bT-S5S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="482" y="1657"/>
+            <point key="canvasLocation" x="479.71014492753625" y="2371.467391304348"/>
         </scene>
-        <!--SESSIONS-->
+        <!--Sessions-->
         <scene sceneID="HQT-29-a8D">
             <objects>
                 <viewController id="ywP-1K-0Jc" customClass="SessionsViewController" customModule="JamSesh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dXa-MJ-T9F">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FUA-hr-iH2">
+                                <rect key="frame" x="0.0" y="64" width="414" height="623"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xBx-N8-Tai">
+                                    <size key="itemSize" width="200" height="199"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="k18-zH-jhv" userLabel="SessionCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="199"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="199"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Session Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rc1-Zi-31J">
+                                                    <rect key="frame" x="46" y="89" width="109" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="1Zt-BK-nlE"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="SESSIONS" image="headset_24px_outlined-1" selectedImage="headset_24px_outlined-1" id="Tea-eM-Vx5"/>
+                    <navigationItem key="navigationItem" title="Sessions" id="xBW-3i-uKL">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="bY0-iR-Cjz">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h1r-aZ-q0u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-378" y="1657"/>
+            <point key="canvasLocation" x="-378.26086956521743" y="2370.6521739130435"/>
         </scene>
         <!--Profile-->
         <scene sceneID="Eyc-vb-BLV">
@@ -402,8 +459,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ywP-1K-0Jc" kind="relationship" relationship="viewControllers" id="3FK-na-RQT"/>
-                        <segue destination="RsE-Fb-tc4" kind="relationship" relationship="viewControllers" id="tAn-Vo-LmS"/>
+                        <segue destination="Yrl-vh-Jhg" kind="relationship" relationship="viewControllers" id="3FK-na-RQT"/>
+                        <segue destination="jwC-IR-E79" kind="relationship" relationship="viewControllers" id="tAn-Vo-LmS"/>
                         <segue destination="k1q-Jj-rMN" kind="relationship" relationship="viewControllers" id="dTZ-U4-ZFI"/>
                         <segue destination="afy-XL-X9v" kind="relationship" relationship="viewControllers" id="AFP-Yj-rEN"/>
                     </connections>
@@ -537,6 +594,7 @@
         <!--PROFILE-->
         <scene sceneID="6GP-aL-S4f">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fBS-10-YL2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="k1q-Jj-rMN" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="PROFILE" image="perm_identity_24px_outlined-1" selectedImage="perm_identity_24px_outlined-1" id="V1b-Q6-wED"/>
                     <toolbarItems/>
@@ -550,9 +608,8 @@
                         <segue destination="JDr-9L-yNb" kind="relationship" relationship="rootViewController" id="yXN-Fj-0Dy"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fBS-10-YL2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1293.5999999999999" y="1656.521739130435"/>
+            <point key="canvasLocation" x="1293" y="1657"/>
         </scene>
         <!--SETTINGS-->
         <scene sceneID="2g4-kT-k4U">
@@ -572,13 +629,54 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I3P-KZ-H5U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2197.5999999999999" y="1656.521739130435"/>
+            <point key="canvasLocation" x="2197" y="1657"/>
+        </scene>
+        <!--SEARCH-->
+        <scene sceneID="Rys-oS-Ck7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jwC-IR-E79" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="SEARCH" image="search_24px_outlined-3" selectedImage="search_24px_outlined-3" id="ZBG-o7-78r"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3yy-Iu-0FY">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.5879548192024231" green="0.72547417879104614" blue="0.72549325227737427" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RsE-Fb-tc4" kind="relationship" relationship="rootViewController" id="aYh-pu-0sA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ecX-HU-FHu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="480" y="1657"/>
+        </scene>
+        <!--SESSIONS-->
+        <scene sceneID="KeG-Dt-hxP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Yrl-vh-Jhg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="SESSIONS" image="headset_24px_outlined-1" selectedImage="headset_24px_outlined-1" id="Tea-eM-Vx5"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vuz-2r-Dkk">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.58795481920000003" green="0.72547417879999998" blue="0.72549325229999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ywP-1K-0Jc" kind="relationship" relationship="rootViewController" id="xEt-bR-Qt3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vo7-i9-eGq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-378.26086956521743" y="1656.521739130435"/>
         </scene>
     </scenes>
     <resources>
         <image name="headset" width="1122" height="1122"/>
         <image name="headset_24px_outlined-1" width="23" height="23"/>
         <image name="perm_identity_24px_outlined-1" width="21" height="21"/>
+        <image name="search_24px_outlined-1" width="105" height="99"/>
         <image name="search_24px_outlined-3" width="23" height="23"/>
         <image name="settings_24px_outlined-1" width="25" height="25"/>
     </resources>
